fix bug on mobile chat post

--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -134,6 +134,7 @@
                 p{
                     color: #1d1b1b;
                     font-size: 14px;
+                    word-break: break-word;
                 }
                 p.time{
                     font-size: 12px;
@@ -203,6 +204,7 @@
                 p{
                     color: #1d1b1b;
                     font-size: 14px;
+                    word-break: break-word;
                 }
                 p.time{
                     font-size: 12px;
@@ -236,7 +238,7 @@
                 color: #fff;
                 border: none;
                 border-radius: 0;
-                border-bottom-right-radius: 4px;
+                // border-bottom-right-radius: 4px;
                 cursor: pointer;
                 font-size: 16px;
             }
